[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainHud.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="FireScore" type="MarginContainer" parent="."]
margin_left = 64.0
margin_top = 8.0
margin_right = 177.0
margin_bottom = 26.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FireScore"]
margin_top = 2.0
margin_right = 113.0
margin_bottom = 16.0
text = "Fire:"
uppercase = true

[node name="Score" type="Label" parent="FireScore"]
margin_top = 2.0
margin_right = 113.0
margin_bottom = 16.0
text = "0"
align = 2

[node name="IceScore" type="MarginContainer" parent="."]
margin_left = 672.0
margin_top = 8.0
margin_right = 785.0
margin_bottom = 26.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IceScore"]
margin_top = 2.0
margin_right = 113.0
margin_bottom = 16.0
text = "Ice:"
uppercase = true

[node name="Score" type="Label" parent="IceScore"]
margin_top = 2.0
margin_right = 113.0
margin_bottom = 16.0
text = "0"
align = 2

[node name="WinnerDisplay" type="MarginContainer" parent="."]
visible = false
margin_left = 256.0
margin_top = 256.0
margin_right = 480.0
margin_bottom = 274.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WinnerDisplay"]
margin_top = 2.0
margin_right = 224.0
margin_bottom = 16.0
text = "Winner"
align = 1
valign = 1
uppercase = true

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 384.0
margin_top = 296.0
margin_right = 449.0
margin_bottom = 316.0
rect_scale = Vector2( 3, 3 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
